vite to next, 2 steps of modal flow

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-# ScraperAPI Configuration
-VITE_SCRAPER_API_KEY=your-scraper-api-key
+# Server-side only (not exposed to client)
+SCRAPER_API_KEY=your_scraper_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
+BLAND_API_KEY=your_bland_api_key_here
+BLAND_API_URL=https://api.bland.ai
+FIRECRAWL_API_KEY=your_firecrawl_api_key_here
+FIRECRAWL_API_URL=https://api.firecrawl.com
 
-# Feature Flags
-VITE_ENABLE_VOICE_CALLS=false
+# Public variables (available to client)
+NEXT_PUBLIC_BLAND_API_URL=https://api.bland.ai
+
+# Feature flags
+ENABLE_VOICE_CALLS=true
